// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadDocsOptions renders the appropriate cert option for adoption bonding leave 1`] = `
Array [
  Object {
    "checked": false,
    "label": "Massachusetts driver's license or ID",
    "value": "UPLOAD_MASS_ID",
  },
  Object {
    "checked": false,
    "label": "Different identification documentation",
    "value": "UPLOAD_ID",
  },
  Object {
    "checked": false,
    "label": "Proof of placement",
    "value": "UPLOAD_CERTIFICATION",
  },
]
`;

exports[`UploadDocsOptions renders the appropriate cert option for newborn bonding leave 1`] = `
Array [
  Object {
    "checked": false,
    "label": "Massachusetts driver's license or ID",
    "value": "UPLOAD_MASS_ID",
  },
  Object {
    "checked": false,
    "label": "Different identification documentation",
    "value": "UPLOAD_ID",
  },
  Object {
    "checked": false,
    "label": "Proof of birth",
    "value": "UPLOAD_CERTIFICATION",
  },
]
`;

exports[`UploadDocsOptions renders the page for medical leave with HCP as cert option 1`] = `
Array [
  Object {
    "checked": false,
    "label": "Massachusetts driver's license or ID",
    "value": "UPLOAD_MASS_ID",
  },
  Object {
    "checked": false,
    "label": "Different identification documentation",
    "value": "UPLOAD_ID",
  },
  Object {
    "checked": false,
    "label": "Certification of a Serious Health Condition",
    "value": "UPLOAD_CERTIFICATION",
  },
]
`;
